tests/positive/Internal/Positivity.juvix
module Positivity;

type T := mk;

type Fun : Type := mk (Box -> T);

type Box := mk T;
