tests/negative/Internal/Positivity/E8.juvix
module E8;

type B (A : Type) :=
  | b : (A -> B (B A -> A)) -> B A;
